fix: Corrects the img tag sizes attribute unit
The img tag sizes attribute used % instead of the acceptable unit such
as vw. Additionally, the media query had to be in reverse order. These
issues were detected by the HTML validator.

My original intent of the sizes value were:
* Default to 33% of the container width
* At screen size less than 640px, set to 50% of the container width
* At screen size less than 480px set to 100% of the container width

I finally noticed that the sizes attribute only applies to the entire
view port width, not to the container. Additionally, the media query had
to be reversed to work correctly.

The updated sizes value now says:
* At screen size of at least 480px, image size is 38vw (derived by the
grid width of 75vw * column width of 50%)
* At screen size of at least 640px, image size is 25vw (derived by the
grid width of 75vw * column width of 33.33%)
* By default (screen size of less than 480px), the image size is the
same as the grid width, which is 75vw.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <img class="main" alt="Main Picture" src="http://placehold.it/960x400" srcset="http://placehold.it/960x400 960w, http://placehold.it/1440x600 1440w, http://placehold.it/1920x800 1920w" sizes="75%">
+      <img class="main" alt="Main Picture" src="http://placehold.it/960x400" srcset="http://placehold.it/960x400 960w, http://placehold.it/1440x600 1440w, http://placehold.it/1920x800 1920w" sizes="75vw">
     </div>
   </div>
   <div class="row">
@@ -45,21 +45,21 @@
       <!-- Site layout adjusted so that the image -->
       <!-- max width is 240px until 1000w -->
       <!-- image can grow up to 310px -->
-      <img class="project" alt="Image of Appify" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="33.333%, (max-width: 640px) 50%, (max-width: 480px) 100%">
+      <img class="project" alt="Image of Appify" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
       <h3 class="project">Appify</h3>
       <p class="project">
         <a class="project" href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a>
       </p>
     </div>
     <div class="col-4 col-4r col-4-2">
-      <img class="project" alt="Image of Sunflower" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="33.333%, (max-width: 640px) 50%, (max-width: 480px) 100%">
+      <img class="project" alt="Image of Sunflower" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
       <h3 class="project">Sunflower</h3>
       <p class="project">
         <a class="project" href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a>
       </p>
     </div>
     <div class="col-4 col-4r col-4-3">
-      <img class="project" alt="Image of Bokeh" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="33.333%, (max-width: 640px) 50%, (max-width: 480px) 100%">
+      <img class="project" alt="Image of Bokeh" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
       <h3 class="project">Bokeh</h3>
       <p class="project">
         <a class="project" href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a>
