fix: Replaces div tags with semantic tags
Replaces div tags with semantic tags such as header, section, and
article.
* Header to denote the div section that contains page title and logo.
* Section to denote div sections that contain major content such as the
main picture and projects.
* Article to denote div sections that mentions projects.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="grid">
-    <div class="row">
+    <header class="row">
       <div class="col-4">
         <img class="logo" alt="Logo" src="http://placehold.it/100x100" srcset="http://placehold.it/100x100 100w, http://placehold.it/200x200 200w, http://placehold.it/300x300 300w" sizes="100px">
       </div>
@@ -26,41 +26,41 @@
           <h1 class="title">Jane Doette</h1>
           <h3 class="subtitle">Front-End Ninja</h3>
       </div>
-    </div>
+    </header>
     <div class="row">
       <hr class="separator">
     </div>
-    <div class="row">
+    <section class="row">
       <div class="col-12">
         <img class="main" alt="Main Picture" src="http://placehold.it/960x400" srcset="http://placehold.it/960x400 960w, http://placehold.it/1440x600 1440w, http://placehold.it/1920x800 1920w" sizes="75vw">
       </div>
-    </div>
+    </section>
     <div class="row">
       <h2 class="section-title">Featured Work</h2>
     </div>
-    <div class="row row-r">
-      <div class="col-4 col-4r col-4-1">
+    <section class="row row-r">
+      <article class="col-4 col-4r col-4-1">
         <img class="project" alt="Image of Appify" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Appify</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a>
         </p>
-      </div>
-      <div class="col-4 col-4r col-4-2">
+      </article>
+      <article class="col-4 col-4r col-4-2">
         <img class="project" alt="Image of Sunflower" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Sunflower</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a>
         </p>
-      </div>
-      <div class="col-4 col-4r col-4-3">
+      </article>
+      <article class="col-4 col-4r col-4-3">
         <img class="project" alt="Image of Bokeh" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Bokeh</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a>
         </p>
-      </div>
-    </div>
+      </article>
+    </section>
   </div>
 </body>
 </html>
