fix: Reverts sections without header child tags to div
As indicated by the HTML validator, reverts sections without header
child tags to div.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <div class="row">
       <hr class="separator">
     </div>
-    <section class="row">
+    <div class="row">
       <div class="col-12">
         <img class="main" alt="Main Picture" src="http://placehold.it/960x400" srcset="http://placehold.it/960x400 960w, http://placehold.it/1440x600 1440w, http://placehold.it/1920x800 1920w" sizes="75vw">
       </div>
-    </section>
+    </div>
     <div class="row">
       <h2 class="section-title">Featured Work</h2>
     </div>
-    <section class="row row-r">
+    <div class="row row-r">
       <article class="col-4 col-4r col-4-1">
         <img class="project" alt="Image of Appify" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Appify</h3>
@@ -60,7 +60,7 @@
           <a class="project" href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a>
         </p>
       </article>
-    </section>
+    </div>
   </div>
 </body>
 </html>
