feat: Replaces placeholder with actual images
Replaces placeholder images from placehold.it with images locally stored
in the images directory. Also adds a SVG version of the logo.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,300">
   <!-- page title -->
   <title>Jane Doette - Front-End Ninja Portfolio</title>
+  <!-- image courtesy of pixabay.com -->
+  <!-- http://pixabay.com/en/imac-apple-mockup-app-ipad-mouse-606765/ by William Iven -->
+  <!-- http://pixabay.com/en/sunflower-plant-nature-outside-105113/ by David Mark -->
+  <!-- http://pixabay.com/en/park-nature-virginia-landscape-429712/ by Jorge Guillen -->
 </head>
 <body>
   <div class="grid">
     <header class="row">
       <div class="col-4">
-        <img class="logo" alt="Logo" src="http://placehold.it/100x100" srcset="http://placehold.it/100x100 100w, http://placehold.it/200x200 200w, http://placehold.it/300x300 300w" sizes="100px">
+        <object class="logo" type="image/svg+xml" data="images/logo.svg">
+          <img alt="Logo" src="images/logo.png">
+        </object>
       </div>
       <div class="col-8">
           <h1 class="title">Jane Doette</h1>
@@ -32,7 +38,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <img class="main" alt="Main Picture" src="http://placehold.it/960x400" srcset="http://placehold.it/960x400 960w, http://placehold.it/1440x600 1440w, http://placehold.it/1920x800 1920w" sizes="75vw">
+        <img class="main" alt="Main Picture" src="images/html_960.jpg" srcset="images/html_960.jpg 960w, images/html_1440.jpg 1440w, images/html_1920.jpg 1920w" sizes="75vw">
       </div>
     </div>
     <div class="row">
@@ -40,21 +46,21 @@
     </div>
     <div class="row row-r">
       <article class="col-4 col-4r col-4-1">
-        <img class="project" alt="Image of Appify" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Appify" src="images/imac_320.jpg" srcset="images/imac_320.jpg 320w, images/imac_480.jpg 480w, images/imac_640.jpg 640w, images/imac_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Appify</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a>
         </p>
       </article>
       <article class="col-4 col-4r col-4-2">
-        <img class="project" alt="Image of Sunflower" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Sunflower" src="images/sunflower_320.jpg" srcset="images/sunflower_320.jpg 320w, images/sunflower_480,jpg 480w, images/sunflower_640.jpg 640w, images/sunflower_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Sunflower</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a>
         </p>
       </article>
       <article class="col-4 col-4r col-4-3">
-        <img class="project" alt="Image of Bokeh" src="http://placehold.it/320x200" srcset="http://placehold.it/320x200 320w, http://placehold.it/480x300 480w, http://placehold.it/640x400 640w, http://placehold.it/960x600 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Bokeh" src="images/park_320.jpg" srcset="images/park_320.jpg 320w, images/park_480.jpg 480w, images/park_640.jpg 640w, images/park_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Bokeh</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a>
