fix: Renames image directory from images to img
Renames image directory to comply with the style guide recommendations.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="grid">
     <header class="row">
       <div class="col-4">
-        <object class="logo" type="image/svg+xml" data="images/logo.svg">
-          <img alt="Logo" src="images/logo.png">
+        <object class="logo" type="image/svg+xml" data="img/logo.svg">
+          <img alt="Logo" src="img/logo.png">
         </object>
       </div>
       <div class="col-8">
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <img class="main" alt="Main Picture" src="images/html_960.jpg" srcset="images/html_960.jpg 960w, images/html_1440.jpg 1440w, images/html_1920.jpg 1920w" sizes="75vw">
+        <img class="main" alt="Main Picture" src="img/html_960.jpg" srcset="img/html_960.jpg 960w, img/html_1440.jpg 1440w, img/html_1920.jpg 1920w" sizes="75vw">
       </div>
     </div>
     <div class="row">
@@ -46,21 +46,21 @@
     </div>
     <div class="row row-r">
       <article class="col-4 col-4r col-4-1">
-        <img class="project" alt="Image of Appify" src="images/imac_320.jpg" srcset="images/imac_320.jpg 320w, images/imac_480.jpg 480w, images/imac_640.jpg 640w, images/imac_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Appify" src="img/imac_320.jpg" srcset="img/imac_320.jpg 320w, img/imac_480.jpg 480w, img/imac_640.jpg 640w, img/imac_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Appify</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a>
         </p>
       </article>
       <article class="col-4 col-4r col-4-2">
-        <img class="project" alt="Image of Sunflower" src="images/sunflower_320.jpg" srcset="images/sunflower_320.jpg 320w, images/sunflower_480,jpg 480w, images/sunflower_640.jpg 640w, images/sunflower_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Sunflower" src="img/sunflower_320.jpg" srcset="img/sunflower_320.jpg 320w, img/sunflower_480,jpg 480w, img/sunflower_640.jpg 640w, img/sunflower_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Sunflower</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a>
         </p>
       </article>
       <article class="col-4 col-4r col-4-3">
-        <img class="project" alt="Image of Bokeh" src="images/park_320.jpg" srcset="images/park_320.jpg 320w, images/park_480.jpg 480w, images/park_640.jpg 640w, images/park_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Bokeh" src="img/park_320.jpg" srcset="img/park_320.jpg 320w, img/park_480.jpg 480w, img/park_640.jpg 640w, img/park_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Bokeh</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a>
