fix: Fix typo in sunflower image url

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
       </article>
       <article class="col-4 col-4r col-4-2">
-        <img class="project" alt="Image of Sunflower" src="img/sunflower_320.jpg" srcset="img/sunflower_320.jpg 320w, img/sunflower_480,jpg 480w, img/sunflower_640.jpg 640w, img/sunflower_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
+        <img class="project" alt="Image of Sunflower" src="img/sunflower_320.jpg" srcset="img/sunflower_320.jpg 320w, img/sunflower_480.jpg 480w, img/sunflower_640.jpg 640w, img/sunflower_960.jpg 960w" sizes="(min-width: 480px) 38vw, (min-width: 640px) 25vw, 75vw">
         <h3 class="project">Sunflower</h3>
         <p class="project">
           <a class="project" href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a>
